# NeuroPC-Jupyter-Client

./: README.md  bostrom-sovereign-kernel-v2.ndjson  neurofs-index.aln
.github/workflows/: ci.yml
jupyter-client/: pyproject.toml
jupyter-client/neuropc_jupyter_client/: config.py  evolution_proposals.py  init.py  neurofs.py  plotting.py  shards_client.py  sovereignty_client.py
jupyter-client/notebooks/: 00_bootstrap_neurofs.ipynb
neuro-assistant-api/: Cargo.toml
neuro-assistant-api/src/: jupyter_bridge.rs  main.rs  rpc_types.rs
rust-core/: Cargo.toml
rust-core/organiccpualn/: Cargo.toml
rust-core/organiccpualn/src/: aln_codec.rs  lib.rs
rust-core/organiccpucore/: Cargo.toml
rust-core/organiccpucore/src/: bio_state.rs  lib.rs
rust-core/sovereigntycore/: Cargo.toml
rust-core/sovereigntycore/src/: lib.rs
rust-core/sovereigntycore/src/api/: mod.rs
rust-core/sovereigntycore/src/guards/: donutloop_logger.rs  mod.rs  neurorights_guard.rs  roh_guard.rs  stake_guard.rs
shards/: host.donutloop.aln  host.evolve.jsonl  host.neuro-cap.aln  host.neurorights.json
