[package]
name = "neuro-assistant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sovereigntycore = { path = "../rust-core/sovereigntycore" }
organiccpualn = { path = "../rust-core/organiccpualn" }

[profile.release]
opt-level = 3
